--- a/Assignment1/app/src/main/res/values/strings.xml
+++ b/Assignment1/app/src/main/res/values/strings.xml
@@ -4,6 +4,6 @@
     <string name="btnFall">Fall</string>
     <string name="btnReset">Reset</string>
     <string name="lblCurrentScore">Current score:</string>
-    <string name="lblCurrentHold">"Current hold: "</string>
-    <string name="lblNotClimbed">You haven\'t climbed yet</string>
+    <string name="lblCurrentHold">🧗 Current hold: </string>
+    <string name="lblNotClimbed">🧗 You haven\'t climbed yet</string>
 </resources>
