--- a/Assignment2/app/src/main/res/values/strings.xml
+++ b/Assignment2/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">Assignment2</string>
+    <string name="name_input">Name <font color='#FF0000'>*</font></string>
+    <string name="email_input">Email <font color='#FF0000'>*</font></string>
+    <string name="renting_input">Renting period <font color='#FF0000'>*</font></string>
 </resources>
